lab-02: add gateway, rename module
